--- a/src/MAUIBlazorHybrid/MAUIBlazorHybrid.csproj
+++ b/src/MAUIBlazorHybrid/MAUIBlazorHybrid.csproj
@@ -58,6 +58,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Camera.MAUI" Version="1.4.4" />
         <PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
         <PackageReference Include="ZXing.Net.Maui.CG" Version="1.0.2" />
