--- a/src/Maui.Platform/Platforms/iOS/Info.plist
+++ b/src/Maui.Platform/Platforms/iOS/Info.plist
@@ -28,5 +28,12 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+
+	<!--启动器-->
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>lyft</string>
+		<string>fb</string>
+	</array>
 </dict>
 </plist>
