--- a/src/Maui.Platform/Platforms/Android/AndroidManifest.xml
+++ b/src/Maui.Platform/Platforms/Android/AndroidManifest.xml
@@ -3,4 +3,24 @@
 	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
+
+
+
+	<queries>
+		<!--浏览器-->
+		<intent>
+			<action android:name="android.intent.action.VIEW" />
+			<data android:scheme="http"/>
+		</intent>
+		<intent>
+			<action android:name="android.intent.action.VIEW" />
+			<data android:scheme="https"/>
+		</intent>
+
+		<!--地图-->
+		<intent>
+			<action android:name="android.intent.action.VIEW" />
+			<data android:scheme="geo"/>
+		</intent>
+	</queries>
 </manifest>
