--- a/src/Maui.Platform/Platforms/Android/AndroidManifest.xml
+++ b/src/Maui.Platform/Platforms/Android/AndroidManifest.xml
@@ -13,7 +13,8 @@
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.READ_CONTACTS" />
 	<uses-permission android:name="android.permission.WRITE_CONTACTS" />
-	<queries>
+	<uses-permission android:name="android.permission.BATTERY_STATS" />
+		<queries>
 		<!--浏览器-->
 		<intent>
 			<action android:name="android.intent.action.VIEW" />
