--- a/src/Maui.Platform/Platforms/Android/AndroidManifest.xml
+++ b/src/Maui.Platform/Platforms/Android/AndroidManifest.xml
@@ -23,6 +23,16 @@
 	<uses-feature android:name="android.hardware.location.network" android:required="false" />
 
 	<uses-permission android:name="android.permission.VIBRATE" />
+
+
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="32" />
+	<!-- Required only if your app needs to access images or photos that other apps created -->
+	<uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
+	<!-- Required only if your app needs to access videos that other apps created -->
+	<uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
+	<!-- Required only if your app needs to access audio files that other apps created -->
+	<uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
 	<queries>
 		<!--浏览器-->
 		<intent>
@@ -38,6 +48,9 @@
 		<intent>
 			<action android:name="android.intent.action.VIEW" />
 			<data android:scheme="geo"/>
+		</intent>
+		<intent>
+			<action android:name="android.media.action.IMAGE_CAPTURE" />
 		</intent>
 	</queries>
 
