--- a/src/Maui.Platform/Maui.Platform.csproj
+++ b/src/Maui.Platform/Maui.Platform.csproj
@@ -50,9 +50,11 @@
 
 	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Maui" Version="5.3.0" />
+		<PackageReference Include="CommunityToolkit.Maui.Markup" Version="3.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.6" />
+		<PackageReference Include="UraniumUI.Dialogs.CommunityToolkit" Version="2.5.5" />
 	</ItemGroup>
 
 </Project>
