--- a/src/Maui.Platform/Platforms/Android/AndroidManifest.xml
+++ b/src/Maui.Platform/Platforms/Android/AndroidManifest.xml
@@ -58,6 +58,19 @@
 		<intent>
 			<action android:name="android.intent.action.TTS_SERVICE" />
 		</intent>
+
+		<intent>
+			<action android:name="android.intent.action.SENDTO" />
+			<data android:scheme="mailto" />
+		</intent>
+		<intent>
+			<action android:name="android.intent.action.DIAL" />
+			<data android:scheme="tel"/>
+		</intent>
+		<intent>
+			<action android:name="android.intent.action.VIEW" />
+			<data android:scheme="smsto"/>
+		</intent>
 	</queries>
 
 
