--- a/src/Maui.Platform/Platforms/Android/AndroidManifest.xml
+++ b/src/Maui.Platform/Platforms/Android/AndroidManifest.xml
@@ -71,6 +71,10 @@
 			<action android:name="android.intent.action.VIEW" />
 			<data android:scheme="smsto"/>
 		</intent>
+
+		<intent>
+			<action android:name="android.support.customtabs.action.CustomTabsService" />
+		</intent>
 	</queries>
 
 
