--- a/src/Maui.Platform/Maui.Platform.csproj
+++ b/src/Maui.Platform/Maui.Platform.csproj
@@ -53,6 +53,7 @@
 		<PackageReference Include="CommunityToolkit.Maui.Markup" Version="3.2.0" />
 		<PackageReference Include="CommunityToolkit.Maui.MediaElement" Version="2.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="Plugin.Maui.CalendarStore" Version="1.0.1" />
 		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.6" />
 		<PackageReference Include="UraniumUI.Dialogs.CommunityToolkit" Version="2.5.5" />
